--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource-variable/playpen-sans": "^5.1.1",
+    "@fontsource/bungee-shade": "^5.1.1",
     "@tailwindcss/vite": "^4.0.7",
     "tailwindcss": "^4.0.7",
     "vue": "^3.5.13"
